--- a/navigation_javascript/package.json
+++ b/navigation_javascript/package.json
@@ -15,6 +15,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "js-sha256": "^0.10.1",
     "openai": "^4.24.1",
     "string-similarity": "^4.0.4"
   }
