--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.9.12"
   }
 }
