infor card page

--- a/package.json
+++ b/package.json
@@ -6,5 +6,17 @@
     "express-session": "^1.18.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.12"
-  }
+  },
+  "name": "gymz",
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "browserify index.js -o bundle.js"
+  },
+  "author": "",
+  "license": "ISC"
 }
