--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "loadData": "nodemon loadShop.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "browserify index.js -o bundle.js"
   },
